@@ -8,6 +8,7 @@ Changes in JMurmel-1.2 relative to JMurmel-1.1
  * changed/ fixed "apply" from a special form to a function, "apply" no longer is a reserved word,
    "apply" now accepts symbols as the first argument as well
  * changed "::": static Java methods no longer want "nil" as a first (ignored) argument
+ * changed macroexpand-1 to return multiple values as one would expect
 
  * changed mlib: dotimes, dolist and doplist accept multiple result-forms (in an implicit progn)
    (was: only the first one was eval'd, the rest were silently ignored)
